--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -34,7 +34,14 @@
 
         </tb:TaskbarIcon>
 
-        <Image Source="{StaticResource homePageBackground}" HorizontalAlignment="Left" VerticalAlignment="Bottom" MaxWidth="420" Margin="100 0 40 0" Grid.Row="1"/>
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="4*"/>
+                <ColumnDefinition Width="3*"/>
+            </Grid.ColumnDefinitions>
+            <Image Source="{StaticResource homePageBackground}" VerticalAlignment="Bottom" Grid.Column="1"/>
+        </Grid>
 
         <DockPanel Grid.Row="1">
 
