--- a/UserControls/IconButton.xaml
+++ b/UserControls/IconButton.xaml
@@ -11,7 +11,7 @@
 
         <Border x:Name="Button" Background="{StaticResource DarkBlue}" CornerRadius="5" Opacity="0" IsMouseDirectlyOverChanged="IconButton_IsMouseDirectlyOverChanged" Cursor="Hand"/>
 
-        <Image x:Name="Icon" Source="{Binding SVGSource, RelativeSource={RelativeSource AncestorType=UserControl}}" MaxWidth="15" MaxHeight="15" Opacity="0.25" IsHitTestVisible="False"/>
+        <Image x:Name="Icon" Source="{Binding SVGSource, RelativeSource={RelativeSource AncestorType=UserControl}}" MaxWidth="15" MaxHeight="15" Opacity="0.25" IsHitTestVisible="False" RenderTransformOrigin="0.5, 0.5"/>
 
     </Grid>
 
