--- a/UserControls/IndividualTask.xaml
+++ b/UserControls/IndividualTask.xaml
@@ -19,7 +19,7 @@
 
         <Border x:Name="Background" Background="{StaticResource DarkBlue}" Opacity="0" Grid.Row="1" CornerRadius="5" MinHeight="40" IsMouseDirectlyOverChanged="Background_IsMouseDirectlyOverChanged" MouseDown="Background_MouseDown" MouseMove="Background_MouseMove">
 
-            <Border.ToolTip>
+            <!--<Border.ToolTip>
                 <ToolTip>
                     <ToolTip.Content>
                         <StackPanel>
@@ -31,7 +31,7 @@
                         </StackPanel>
                     </ToolTip.Content>
                 </ToolTip>
-            </Border.ToolTip>
+            </Border.ToolTip>-->
 
         </Border>
 
