--- a/UserControls/IndividualTask.xaml
+++ b/UserControls/IndividualTask.xaml
@@ -17,23 +17,7 @@
 
         <Border x:Name="StrokeBorder" Grid.Row="1" CornerRadius="5" BorderBrush="{StaticResource Blue}" BorderThickness="0" Width="{Binding ActualWidth, ElementName=Background, Mode=OneWay}" Height="{Binding ActualHeight, ElementName=Background, Mode=OneWay}"/>
 
-        <Border x:Name="Background" Background="{StaticResource DarkBlue}" Opacity="0" Grid.Row="1" CornerRadius="5" MinHeight="40" IsMouseDirectlyOverChanged="Background_IsMouseDirectlyOverChanged" MouseDown="Background_MouseDown" MouseMove="Background_MouseMove">
-
-            <!--<Border.ToolTip>
-                <ToolTip>
-                    <ToolTip.Content>
-                        <StackPanel>
-                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                                <local:ButtonToolTip ToolTipText="Enter Keyboard Mode" Button1Text="↓" CornerRadius="2 0 0 2" BorderPadding="5 5 0 5"/>
-                                <local:ButtonToolTip ToolTipText="/" Button1Text="↑" CornerRadius="0 2 2 0" BorderPadding="2 5 5 5"/>
-                            </StackPanel>
-                            <local:ButtonToolTip ToolTipText="Toggle Task Completion" Button1Text="spacebar" Margin="0 10 0 0"/>
-                        </StackPanel>
-                    </ToolTip.Content>
-                </ToolTip>
-            </Border.ToolTip>-->
-
-        </Border>
+        <Border x:Name="Background" Background="{StaticResource DarkBlue}" Opacity="0" Grid.Row="1" CornerRadius="5" MinHeight="40" IsMouseDirectlyOverChanged="Background_IsMouseDirectlyOverChanged" MouseDown="Background_MouseDown"/>
 
         <Line VerticalAlignment="Bottom" Stroke="{StaticResource Accent}" StrokeThickness="2" X2="{Binding ActualWidth, ElementName=Background}" Grid.Row="2" Opacity="0.25"/>
 
