--- a/Windows/GlobalAddTask.xaml
+++ b/Windows/GlobalAddTask.xaml
@@ -4,8 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TemporaTasks.Windows" xmlns:userControl="clr-namespace:TemporaTasks.UserControls"
-        mc:Ignorable="d"
-        Title="GlobalAddTask" WindowStyle="None" AllowsTransparency="True" Background="Transparent" ResizeMode="NoResize" Width="650" Height="275" Loaded="Window_Loaded" KeyDown="Window_KeyDown"
+        mc:Ignorable="d" d:Opacity="1"
+        Title="GlobalAddTask" WindowStyle="None" AllowsTransparency="True" Background="Transparent" ResizeMode="NoResize" Width="650" Height="300" Loaded="Window_Loaded" KeyDown="Window_KeyDown" PreviewKeyUp="Window_PreviewKeyUp"
         Opacity="0" Deactivated="Window_Deactivated">
 
     <Grid>
@@ -14,15 +14,16 @@
 
         <Image Source="{StaticResource homePageBackground}" HorizontalAlignment="Left" VerticalAlignment="Bottom" Width="420" Margin="70 -60 40 0" Grid.Row="1"/>
 
+        <Label Content="Add Task" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" Foreground="{StaticResource Text}" FontSize="10" Padding="0" IsHitTestVisible="False" HorizontalAlignment="Center" Margin="0 30 0 0"/>
+
         <StackPanel Margin="50 0" VerticalAlignment="Center">
-
-            <!--<Label x:Name="label" Content="Add a Task" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="20" HorizontalAlignment="Left" VerticalAlignment="Top" VerticalContentAlignment="Top" Padding="0,0,0,0" Margin="0 0 0 20"/>-->
-
-            <Label Content="Add Task" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" Foreground="{StaticResource Text}" FontSize="10" Padding="0" IsHitTestVisible="False" HorizontalAlignment="Center" Margin="0 0 0 15"/>
 
             <StackPanel>
 
-                <Label Content="Task Name" Padding="0" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="12"/>
+                <Grid>
+                    <Label Content="Task Name" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="12" Padding="0"/>
+                    <Line x:Name="L1" Stroke="{StaticResource Text}" X2="7" Margin="28.5 14 0 0" Visibility="Collapsed"/>
+                </Grid>
 
                 <Grid Height="35" Margin="0 5 0 0">
                         
@@ -46,7 +47,10 @@
 
                     <Popup x:Name="datePickerPopUp" PlacementTarget="{Binding ElementName=calendarButtonBorder}" StaysOpen="False" VerticalOffset="10"/>
 
-                    <Label Content="Date" Padding="0" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="12" Margin="0 0 0 5"/>
+                    <Grid>
+                        <Label Content="Date" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="12" Margin="0 0 0 5" Padding="0"/>
+                        <Line x:Name="L2" Stroke="{StaticResource Text}" X2="7" Margin="0 14 0 0" Visibility="Collapsed"/>
+                    </Grid>
 
                     <Grid Height="35">
 
@@ -66,64 +70,113 @@
                 </StackPanel>
 
                 <StackPanel Grid.Column="2">
-                    
-                    <Label Content="Time" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="12" Padding="0" Margin="0 0 0 5"/>
+
+                    <Grid>
+                        <Label Content="Time" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="12" Padding="0" Margin="0 0 0 5"/>
+                        <Line x:Name="L3" Stroke="{StaticResource Text}" X2="7" Margin="0 14 0 0" Visibility="Collapsed"/>
+                    </Grid>
 
                     <Grid Height="35">
 
                         <TextBox x:Name="timeTextBox" Style="{StaticResource RoundedTextBox}" FontSize="12" Padding="8 0 0 0" GotKeyboardFocus="Textbox_GotKeyboardFocus"/>
-                        
+
                         <Border x:Name="TimeBorder" BorderBrush="{StaticResource PastDue}" BorderThickness="0" CornerRadius="10"/>
 
                     </Grid>
-                    
+
                 </StackPanel>
 
             </Grid>
 
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0 20 0 0">
+            <DockPanel Margin="0 20 0 0">
 
-                <Border x:Name="CancelButton" HorizontalAlignment="Right" CornerRadius="5" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseDown="CancelButton_MouseDown" MouseMove="Border_MouseMove" Margin="0 10 0 0" Height="30" Cursor="Hand">
+                <StackPanel Orientation="Horizontal" DockPanel.Dock="Right" VerticalAlignment="Bottom">
 
-                    <Border.Background>
-                        <SolidColorBrush Opacity="0.5" Color="{Binding Color, Source={StaticResource Secondary}}"/>
-                    </Border.Background>
+                    <Border x:Name="CancelButton" HorizontalAlignment="Right" CornerRadius="5" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseDown="CancelButton_MouseDown" MouseMove="Border_MouseMove" Height="35" Cursor="Hand" Margin="0 0 10 0">
 
-                    <Border.ToolTip>
-                        <ToolTip>
-                            <ToolTip.Content>
-                                <userControl:ButtonToolTip ToolTipText="Cancel" Button1Text="esc"/>
-                            </ToolTip.Content>
-                        </ToolTip>
-                    </Border.ToolTip>
+                        <Border.Background>
+                            <SolidColorBrush Opacity="0.5" Color="{Binding Color, Source={StaticResource Secondary}}"/>
+                        </Border.Background>
 
-                    <Label Content="Cancel" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="12" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Padding="0,0,0,0" Margin="15 0 15 0" Grid.Column="1" IsHitTestVisible="False" VerticalAlignment="Center"/>
+                        <Border.ToolTip>
+                            <ToolTip>
+                                <ToolTip.Content>
+                                    <userControl:ButtonToolTip ToolTipText="Cancel" Button1Text="esc"/>
+                                </ToolTip.Content>
+                            </ToolTip>
+                        </Border.ToolTip>
+
+                        <Label Content="Cancel" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="12" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Padding="15 0" Grid.Column="1" IsHitTestVisible="False" VerticalAlignment="Center"/>
+
+                    </Border>
+
+                    <Border x:Name="AddButton" HorizontalAlignment="Right" CornerRadius="5" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseDown="AddButton_MouseDown" MouseMove="Border_MouseMove" Height="35" Cursor="Hand">
+
+                        <Border.Background>
+                            <SolidColorBrush Opacity="0.5" Color="{Binding Color, Source={StaticResource DarkBlue}}"/>
+                        </Border.Background>
+
+                        <Border.ToolTip>
+                            <ToolTip>
+                                <ToolTip.Content>
+                                    <userControl:ButtonToolTip ToolTipText="Add Task" Button1Text="enter"/>
+                                </ToolTip.Content>
+                            </ToolTip>
+                        </Border.ToolTip>
+
+                        <Label Content="Add Task" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="12" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Padding="15 0" Grid.Column="1" IsHitTestVisible="False" VerticalAlignment="Center"/>
+
+                    </Border>
+
+                </StackPanel>
+
+                <Border Background="Transparent" MouseDown="HighPriority_MouseDown" Cursor="Hand" DockPanel.Dock="Right" Height="35" VerticalAlignment="Bottom" Margin="0 0 40 0">
+
+                    <StackPanel Orientation="Horizontal">
+
+                        <Grid>
+                            <Label Content="High Priority" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="12" Padding="0" VerticalAlignment="Center"/>
+                            <Line x:Name="L5" Stroke="{StaticResource Text}" X2="6" Margin="28 24 0 0" Visibility="Collapsed"/>
+                        </Grid>
+
+                        <Border BorderBrush="{StaticResource CheckBox}" BorderThickness="2" CornerRadius="2" HorizontalAlignment="Center" Width="14" Height="14" Margin="10 0 0 0">
+                            <Path Data="M1,4 L4,6 L7,1" x:Name="checkMark" Stroke="{StaticResource Blue}" Width="8" Height="8" Margin="0 1 0 0" StrokeThickness="2" IsHitTestVisible="False" Opacity="0" />
+                        </Border>
+
+                    </StackPanel>
 
                 </Border>
 
-                <Border x:Name="AddButton" HorizontalAlignment="Right" CornerRadius="5" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseDown="AddButton_MouseDown" MouseMove="Border_MouseMove" Margin="10 10 0 0" Height="30" Cursor="Hand">
+                <DockPanel DockPanel.Dock="Left" Margin="0 0 30 0">
 
-                    <Border.Background>
-                        <SolidColorBrush Opacity="0.5" Color="{Binding Color, Source={StaticResource DarkBlue}}"/>
-                    </Border.Background>
+                    <Grid DockPanel.Dock="Top">
+                        <Label Content="Tags" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="12" Padding="0"/>
+                        <Line x:Name="L4" Stroke="{StaticResource Text}" X2="7" Margin="13 14 0 0" Visibility="Collapsed"/>
+                    </Grid>
 
-                    <Border.ToolTip>
-                        <ToolTip>
-                            <ToolTip.Content>
-                                <userControl:ButtonToolTip ToolTipText="Add Task" Button1Text="enter"/>
-                            </ToolTip.Content>
-                        </ToolTip>
-                    </Border.ToolTip>
+                    <Grid Margin="0 5 0 0" Height="35">
 
-                    <Label Content="Add Task" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="12" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Padding="0,0,0,0" Margin="15 0 15 0" Grid.Column="1" IsHitTestVisible="False" VerticalAlignment="Center"/>
+                        <DockPanel>
 
-                </Border>
+                            <StackPanel Orientation="Horizontal" x:Name="TagsStack" DockPanel.Dock="Left"/>
 
-            </StackPanel>
+                            <TextBox x:Name="TagsTextbox" Style="{StaticResource TransparentUnroundedTextBox}" DockPanel.Dock="Right" PreviewKeyDown="TagsTextbox_PreviewKeyDown" GotKeyboardFocus="Textbox_GotKeyboardFocus"/>
+
+                        </DockPanel>
+
+                        <Border BorderBrush="#363636" BorderThickness="2" CornerRadius="10"/>
+
+                        <Border x:Name="TagsBorder" BorderBrush="{StaticResource PastDue}" BorderThickness="0" CornerRadius="10"/>
+
+                    </Grid>
+
+                </DockPanel>
+
+            </DockPanel>
 
         </StackPanel>
 
-        <Border CornerRadius="20" BorderBrush="{StaticResource Border}" BorderThickness="1"/>
+        <Border CornerRadius="20" BorderBrush="{StaticResource Border}" BorderThickness="1" IsHitTestVisible="False"/>
 
     </Grid>
 
